--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^1.6.3",
     "react-dom": "^18.2.0",
+    "react-easy-crop": "^5.0.5",
     "react-icons": "^5.0.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^5.3.4",
@@ -46,6 +47,6 @@
     ]
   },
   "devDependencies": {
-    "msw": "^2.1.5"
+    "msw": "^0.35.0"
   }
 }
