--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.5",
     "bootstrap": "^4.6.0",
     "emoji-mart": "^5.5.2",
+    "emoji-picker-react": "^4.7.12",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^1.6.3",
